#fix about page picture alignment. #create-issue suggestion to make the about image' class customizable via custom.css file and parameters in configuration

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,3 +12,9 @@
     align-items: flex-start;
     flex-direction: row
 }
+
+.section div[class*="col-"] img.image-align-right {
+    display: block;
+    margin-left: auto;
+    margin-right: 20px;
+}
